# OpenSW

OpenSw_Project/BE/movie-api/: pyproject.toml
OpenSw_Project/BE/movie-api/app/: main.py
OpenSw_Project/BE/movie-api/app/static/: index.html  schemas.py
OpenSw_Project/FE/React_Folder/: package-lock.json  package.json
OpenSw_Project/FE/React_Folder/src/: App.jsx  index.css
OpenSw_Project/FE/React_Folder/src/Components/: Header.css  Header.jsx
OpenSw_Project/FE/React_Folder/src/Components/MovieList/: MovieList.css  MovieList.jsx
OpenSw_Project/FE/React_Folder/src/pages/: Home.jsx  Login.css  Login.jsx  MovieDetail.jsx  MyPage.css  MyPage.jsx  SignUp.css  SignUp.jsx
